--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h1 style="margin-top: -4px;">Yomi demo</h1>
         <p>Input the text you'd like to analyze. See the <a href="https://github.com/ookii-tsuki/yomi" target="_blank">Yomi API</a> docs for more details.</p>
         <form method="post">
-            <textarea placeholder="" spellcheck="false" maxlength="5000"></textarea>
+            <textarea placeholder="" spellcheck="false" maxlength="5000" autofocus></textarea>
             <br>
             <select name="mode" id="">
                 <option value="normal">Normal</option>
